update metadata Generated cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -9,6 +9,9 @@ contributor:
     gutenberg_agent_id: '46596'
     url: http://www.gutenberg.org/2009/agents/46596
     wikipedia: https://fi.wikipedia.org/wiki/Väinö_Nyman
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Orczy, Emmuska Orczy, Baroness
@@ -21,6 +24,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/45
     wikipedia: https://en.wikipedia.org/wiki/Baroness_Orczy
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/71472#Pustan-poika
 gutenberg_issued: '2023-08-22'
 identifiers:
   gutenberg: '71472'
